--- a/HTML/BANKING.html
+++ b/HTML/BANKING.html
@@ -12,35 +12,40 @@
       {
          border:9px solid black;
          border-collapse:collapse;
+         font-family: 'Brush Script MT';
 
       }
       th, td
       {
          padding:9px;
+         font-family: 'Brush Scipt MT';
  
       }
       th
       {
          text-align:center;
          padding:9px;
+         font-family: 'Brush Script MT';
 
       }
       table tr:nth-child(even)
       {
          background-color: violet;
          color:white;
+         font-family: 'Brush Script MT';
 
       }
       table tr:nth-child(odd)
       {
          background-color: blue;
          color:white;
+         font-family: 'Brush Script MT';
       }
       table th
       {
          color: white;
          background-color: red ;
-       
+         font-family: 'Brush Script MT';
       }
       caption
       {
@@ -49,13 +54,15 @@
         font-size:x-large;
         border:9px solid black;
         border-collapse:collapse;
+        font-family:"Courier New",monospace;
       }
    </style>
 </head>
 <body>
 
 
-<table style="width:80%;">
+<table style="width:80%,
+font-family: Georgia, 'Times New Roman', Times, serif;">
 <caption>USER_DETAILS</caption>
 <tr>
    <th>USER_NAME</th>
@@ -65,11 +72,13 @@
    <th>TOT_BAL</th>
 </tr>
 <tr>
+   <font-face="Verdana">
    <td>MANI</td>
    <td>MANI23@123</td>
    <td>1999-09-23</td>
    <td>8</td>
    <td>3000</td>
+</font-face>
 </tr>
 <tr>
    <td>SARVESH</td>
@@ -93,8 +102,9 @@
    <td>45000</td>
 </tr>
 </table>
-<table style="width:80%;">
-    <caption>ACCOUNT_DETAILS</caption>
+<table style="width:80%,
+font-family: Georgia, 'Times New Roman', Times, serif;">  
+ <caption>ACCOUNT_DETAILS</caption>
     <tr>
        <th>USER_NAME</th>
        <th>ACC_NO</th>
@@ -127,7 +137,8 @@
        <td>6</td>
     </tr>
     </table>
-    <table style="width:80%;">
+    <table style="width:80%,
+     font-family: Georgia, 'Times New Roman', Times, serif;">
         <caption>TRANSACTION_DETAILS</caption>
         <tr>
            <th>USER_NAME</th>
